<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
<LinearLayout 
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand" />

    <TextView
        android:id="@+id/brand_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear2"
    android:layout_below="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo" />
    <ImageView
        android:id="@+id/logo_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/abc_btn_borderless_material" />

</LinearLayout>
<LinearLayout
    android:id="@+id/linear3" 
    android:layout_below="@+id/linear2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <TextView
        android:id="@+id/model_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear4"
    android:layout_below="@+id/linear3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/plate_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_num" />

    <TextView
        android:id="@+id/plate_num_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear5"
    android:layout_below="@+id/linear4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/engine_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engine_num" />

    <TextView
        android:id="@+id/engine_num_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear6"
    android:layout_below="@+id/linear5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level" />

    <TextView
        android:id="@+id/level_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear7"
    android:layout_below="@+id/linear6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/kilometers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers" />

    <TextView
        android:id="@+id/kilometers_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear8"
    android:layout_below="@+id/linear7"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/gasline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasline" />

    <TextView
        android:id="@+id/gasline_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear9"
    android:layout_below="@+id/linear8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/engine_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engine_perform" />

    <TextView
        android:id="@+id/engine_per_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear10"
    android:layout_below="@+id/linear9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/transmission_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmission_perform" />

    <TextView
        android:id="@+id/transmission_per_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear11"
    android:layout_below="@+id/linear10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/lighting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lighting" />

    <TextView
        android:id="@+id/lighting_perform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
</RelativeLayout>
