<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/Layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:gravity="end"
            android:text="@string/username"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regs_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:inputType="textPersonName" >
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.3"
            android:visibility="invisible"
            android:text="" />
 
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layout_username"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regs_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomCheckboxTheme" 
             />
        
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layout_password"
         android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/again_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/again_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regs_repassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <CheckBox
            android:id="@+id/show_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomCheckboxTheme" 
             />

    </LinearLayout>
    <LinearLayout
         android:id="@+id/Layout_realname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layout_repassword"
         android:layout_marginTop="20dp"
        android:orientation="horizontal" >

         <TextView
             android:id="@+id/real_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
             android:text="@string/real_name"
             android:textSize="16sp" />

        <EditText
            android:id="@+id/regs_real_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:ems="10"
            android:text=""/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="0.3"
            android:text=""
            android:visibility="invisible" />

    </LinearLayout>
      <TextView
             android:id="@+id/content1"
             android:layout_below="@+id/Layout_realname"
              android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="#ff0000"
              />
 <LinearLayout
        android:id="@+id/Layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content1"
         android:layout_marginTop="20dp"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/btn_ensure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ensure" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>
</RelativeLayout>